fixed bugs in persistinig of mage objects. basic problem is we can't just persist all the object, but should persist the expression experiments - otherwise we get duplicate key errors.
use commons.coded in Base64 encoding (need to tetst).

fix candidategenelistdaoimpletests.